# yapchat

./: README.md
yap-client/: Cargo.toml
yap-client/src/: main.rs
yap-server/: Cargo.toml  TODO.md
yap-server/src/: errors.rs  logging.rs  main.rs
yap-server/src/state/: chat_room.rs  client.rs  globals.rs  mod.rs
