[package]
name = "yap-server"
version = "0.1.0"
edition = "2021"

[dependencies]
better-panic = "0.3.0"
chrono = { version = "0.4.38", features = ["serde"] }
color-eyre = "0.6.3"
console-subscriber = "0.4.0"
futures = "0.3.31"
human-panic = "2.0.1"
lazy_static = "1.5.0"
libc = "0.2.159"
pollster = "0.3.0"
rusqlite = "0.32.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
strip-ansi-escapes = "0.2.0"
tokio = { version = "1.40.0", features = ["full", "tracing"] }
tokio-stream = { version = "0.1.16", features = ["full"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = "0.3.18"
warp = "0.3.7"
